# meetify_backend

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt
app/: config.py  data.py  database.py  dependencies.py  exceptions.py
app/models/: location.py  meeting.py  user.py
app/routers/: admin.py  auth.py  employees.py  managers.py
app/schemas/: admin.py  auth.py  employee.py  manager.py  meeting.py
app/services/: admin_service.py  auth_service.py  employee_service.py  manager_service.py  meeting_service.py
app/utils/: email.py  password.py  security.py  validators.py
