[project]
name = "meetify-backend"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-types>=0.7.0",
    "bcrypt<4.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "passlib[bcrypt]>=1.7.4",
    "phonenumbers>=9.0.30",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
